- Added a lot of stuff, didnt sleep this night - Added Logging helper mechanism ( on utils.js ) - Added data check on most functions called by endpoints - Managed HTTP error responses - Fixed some css - Added "Add to community" on public playlist cards - Improved swagger - Fixed and added minor details - Probably more stuff i cant remember rn
